# protomol

./: .gitignore  LICENSE  README.md  lefthook.yml  pyproject.toml  test.ipynb
.github/workflows/: lint.yml  test.yml
examples/: geometry-embedding.ipynb  reaction-mapping.ipynb
src/protomol/: __init__.py  geom.py
src/protomol/rd/: __init__.py  mol.py  mols.py
src/protomol/util/: types.py  units.py
tests/: test_stub.py
