[project]
authors = [{name = "avcopan", email = "avcopan@gmail.com"}]
dependencies = []
name = "protomol"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
protomol = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.0"
networkx = ">=3.3"
rdkit = "*"
pint = "*"
py3dmol = "*"
pydantic = "*"

[tool.pixi.feature.dev.dependencies]
ipykernel = "*"

[tool.pixi.environments]
dev = ["dev"]
