[project]
authors = [{name = "avcopan", email = "avcopan@gmail.com"}]
dependencies = []
name = "protomol"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
protomol = { path = ".", editable = true }

[tool.pixi.feature.lint.tasks]
lint = "lefthook run pre-commit --all-files"

[tool.pixi.dependencies]
numpy = ">=2.0"
networkx = ">=3.3"
rdkit = "*"
pint = "*"
py3dmol = "*"
pydantic = "*"

[tool.pixi.feature.dev.dependencies]
ipykernel = "*"

[tool.pixi.feature.lint.dependencies]
lefthook = "*"
ruff = "*"
mypy = ">=1.17.1,<2"

[tool.pixi.environments]
dev = ["dev", "lint"]

# Ruff configurations
[tool.ruff]
target-version = "py311"
output-format = "concise"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing trailing comma (handled by format)
    "RUF022",   # `__all__` is not sorted
    "TID252",   # relative import
    # resolve rule conflicts:
    "D203",     # incorrect blank line before class (uses D211 instead)
    "D213",     # multi-line summary second line (uses D212 instead)
]
